add test flag to gradle